derive/tests/snapshots/hash_index/Session/update_session_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Session` row of the `session` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn update_session_by_id<'a>(
        &'a self,
        session: Session,
    ) -> Result<Session, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut session = session;
        let session = self.db().session().id().update(session);
        Ok(session)
    }
}
